[package]
name = "face_filter"
version = "0.1.0"
authors = ["Ze Pedro Resende <j.p.resende68@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.43", features = ["clang-runtime", "buildtime-bindgen"]}
